修改样式，添加头像

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>张建的个人简历</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="assets/fonts/custom-fonts.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
+        <img src="assets/fonts/photo.jpg" alt="张建的照片" class="profile-image">
         <h1>张建</h1>
         <p>智能系统工程师</p>
         <div class="contact-info">
