修改思维导图

--- a/index.html
+++ b/index.html
@@ -132,16 +132,21 @@
             <h3>学习路线</h3>
             <ul>
                 <li><a href="https://roadmap.sh/r/artificial-intelligence--automation-engineering" target="_blank">HUST人工智能与自动化学院学习路线</a></li>
-                <li><a href="https://roadmap.sh/r/rdm-1fxem" target="_blank">赛道选择</a></li>
-                <li><a href="https://roadmap.sh/r/bigideas" target="_blank">BIGIDEAS</a></li>
+                <li><a href="https://roadmap.sh/r/automated-planning-a7laa" target="_blank">Automated Planning</a></li>
             </ul>
         </div>
         <div class="roadmap-item">
-            <h3>学习资源</h3>
+            <h3>个人思维导图</h3>
             <ul>
                 <li><a href="https://roadmap.sh/r/rdm-vwpbf" target="_blank">开源项目学习</a></li>
                 <li><a href="https://roadmap.sh/r/paper-fuxvk" target="_blank">论文阅读记录</a></li>
-                <li><a href="https://roadmap.sh/r/automated-planning-a7laa" target="_blank">Automated Planning</a></li>
+            </ul>
+        </div>
+        <div class="roadmap-item">
+            <h3>创业思考</h3>
+            <ul>
+                <li><a href="https://roadmap.sh/r/rdm-1fxem" target="_blank">赛道选择</a></li>
+                <li><a href="https://roadmap.sh/r/bigideas" target="_blank">BIGIDEAS</a></li>
             </ul>
         </div>
     </section>
