--- a/index.html
+++ b/index.html
@@ -138,15 +138,15 @@
         <div class="roadmap-item">
             <h3>个人思维导图</h3>
             <ul>
-                <li><a href="https://roadmap.sh/r/rdm-vwpbf" target="_blank">开源项目学习</a></li>
-                <li><a href="https://roadmap.sh/r/paper-fuxvk" target="_blank">论文阅读记录</a></li>
+                <li><a href="https://roadmap.sh/r/rdm-ud9x6" target="_blank">开源项目学习</a></li>
+                <li><a href="https://roadmap.sh/r/paper-wz63b" target="_blank">论文阅读记录</a></li>
             </ul>
         </div>
         <div class="roadmap-item">
             <h3>创业思考</h3>
             <ul>
                 <li><a href="https://roadmap.sh/r/rdm-1fxem" target="_blank">赛道选择</a></li>
-                <li><a href="https://roadmap.sh/r/bigideas" target="_blank">BIGIDEAS</a></li>
+                <li><a href="https://roadmap.sh/r/bigideas-xp3nw" target="_blank">BIGIDEAS</a></li>
             </ul>
         </div>
     </section>
