增加思维导图

--- a/index.html
+++ b/index.html
@@ -132,13 +132,16 @@
             <ul>
                 <li><a href="https://roadmap.sh/r/artificial-intelligence--automation-engineering" target="_blank">HUST人工智能与自动化学院学习路线</a></li>
                 <li><a href="https://roadmap.sh/r/automated-planning-a7laa" target="_blank">Automated Planning</a></li>
+                <li><a href="https://draw.roadmap.sh/684b97b7a60942b85d59d567" target="_blank">Acting, Planning and Learning</a></li>
             </ul>
         </div>
         <div class="roadmap-item">
             <h3>个人思维导图</h3>
             <ul>
                 <li><a href="https://roadmap.sh/r/rdm-ud9x6" target="_blank">开源项目学习</a></li>
+                <li><a href="https://roadmap.sh/r/rdm-xqyvk" target="_blank">硬/软件相关的有用的网址</a></li>
                 <li><a href="https://roadmap.sh/r/paper-wz63b" target="_blank">论文阅读记录</a></li>
+                <li><a href="https://roadmap.sh/r/rdm-xqyvk" target="_blank">规划相关论文阅读记录</a></li>
             </ul>
         </div>
         <div class="roadmap-item">
