--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
             <h3>个人思维导图</h3>
             <ul>
                 <li><a href="https://roadmap.sh/r/rdm-ud9x6" target="_blank">开源项目学习</a></li>
-                <li><a href="https://roadmap.sh/r/rdm-xqyvk" target="_blank">硬/软件相关的有用的网址</a></li>
+                <li><a href="https://roadmap.sh/r/copy-lsiu7" target="_blank">硬件相关的有用的网址</a></li>
+                <li><a href="https://roadmap.sh/r/rdm-xqyvk" target="_blank">软件相关的有用的网址</a></li>
                 <li><a href="https://roadmap.sh/r/paper-wz63b" target="_blank">论文阅读记录</a></li>
                 <li><a href="https://roadmap.sh/r/planningpaper" target="_blank">规划相关论文阅读记录</a></li>
             </ul>
